--- a/Website Portfolio/Website [VSCode]/myworks.html
+++ b/Website Portfolio/Website [VSCode]/myworks.html
@@ -47,7 +47,7 @@
                                 <ion-icon name="globe-outline"></ion-icon>
                                 Live Demo
                             </a>
-                            <a href="https://classroom.google.com/c/NzczNjg4NzE5NjI4/a/ODI5MDE4NTMyODU2/details" target="_blank" class="project-link">
+                            <a href="https://github.com/KouhaiKo/Personal-Projects/tree/main/Website%20Portfolio/Website%20%5BVSCode%5D" target="_blank" class="project-link">
                                 <ion-icon name="logo-github"></ion-icon>
                                 Source Code
                             </a>
@@ -124,4 +124,5 @@
         </div>
     </div>
 </body>
+
 </html>
